--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Life-of-Robert-Browning_656
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Sharp, William
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/337
     wikipedia: http://en.wikipedia.org/wiki/William_Sharp_%28writer%29
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/656#Life-of-Robert-Browning
 gutenberg_issued: '1996-09-01'
 gutenberg_type: Text
 identifiers:
